updated to latest main version changes
- renamed "Unruhe" to "Unzufriedenheit"
- translated some new things
-fixed typos

--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -603,7 +603,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_TRAIT_FAMILY_RETREAT_OPTION_0</zType>
-		<Translation><![CDATA[Verhaffte den {FAMILY-1,0} Stadthalter als Warnung.]]></Translation>
+		<Translation><![CDATA[Verhaffte den {FAMILY-1,0} Statthalter als Warnung.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_TRAIT_FAMILY_RETREAT_OPTION_1</zType>
@@ -5071,7 +5071,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_WEARY_MARAUDERS_LABOR</zType>
-		<Translation><![CDATA[Harte Arbeit ist eine würdiger Grund.]]></Translation>
+		<Translation><![CDATA[Harte Arbeit ist ein würdiger Grund.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_WEARY_MARAUDERS_FIGHT</zType>
