--- a/Translations/German/text-project-change.xml
+++ b/Translations/German/text-project-change.xml
@@ -17,7 +17,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_GOVERNOR</zType>
-		<Translation>Stadthalter~ein Stadthalter~Stadthalter</Translation>
+		<Translation>Statthalter~ein Statthalter~Statthalter</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_WALLS</zType>
