--- a/Translations/German/text-yield-change.xml
+++ b/Translations/German/text-yield-change.xml
@@ -54,7 +54,7 @@ Families that are link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), or link
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_DISCONTENT</zType>
-		<Translation>Unruhe</Translation>
+		<Translation>Unzufriedenheit</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_DISCONTENT_HELP</zType>
