added and translated some missing new entries from latest version

--- a/Translations/German/text-helptext-change.xml
+++ b/Translations/German/text-helptext-change.xml
@@ -454,7 +454,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_LINK_FRESH_WATER</zType>
-		<Translation>Frisches Wasser</Translation>
+		<Translation>Frischwasser</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_LINK_ROAD</zType>
